--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ body {
     color: white;
     background-color: rgb(36, 15, 104);
 }
+
+section {
+    background: rgb(156, 66, 156);
+    padding-bottom: 80px;
+    padding-bottom: 80px;
+}
