--- a/style.css
+++ b/style.css
@@ -6,5 +6,5 @@ body {
 section {
     background: rgb(156, 66, 156);
     padding-bottom: 80px;
-    padding-bottom: 80px;
+    padding-top: 80px;
 }
