--- a/style.css
+++ b/style.css
@@ -14,3 +14,13 @@ section {
 .chamada-texto {
     margin-right: 20px;
 }
+
+img {
+    height: 200px;
+  }
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
