--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: rgb(36, 15, 104);
 }
 
-section {
+.chamada {
     background: rgb(156, 66, 156);
     padding-bottom: 80px;
     padding-top: 80px;
