--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     color: white;
     background-color: rgb(11, 11, 11);
-    font-family: "Ole", sans-serif;
+    font-family: "Borel", sans-serif;
 }
 
 .chamada {
