--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
     background: rgb(156, 66, 156);
     padding-bottom: 80px;
     padding-top: 80px;
+    margin-left: 5%;
+    margin-right: 5 %;
     display: flex;
     justify-content: center;
 }
